fix background image on mobile

--- a/public/css/default.css
+++ b/public/css/default.css
@@ -53,7 +53,10 @@
     z-index: -1;
     width: 100%;
     height: 100%;
-    position: absolute;
+    -webkit-background-size: 100%;
+    -moz-background-size: 100%;
+    -o-background-size: 100%;
+    background-size: 100%;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
